--- a/Contacteme.html
+++ b/Contacteme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng-US">
 <head>
-<title>Contacteme | CompuDoctor</title>
+<title>Contácteme | CompuDoctor</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -73,7 +73,7 @@
     <div class="container-fluid">
         <div class="box">
             <div class="row"></div>
-            <h1><strong>Contacteme</strong></h1>
+            <h1><strong>Contácteme</strong></h1>
             <hr>
         </div>
     </div>
