--- a/Servicios.html
+++ b/Servicios.html
@@ -140,7 +140,7 @@
             <div class="row">
                  <div class="col-s-9">
                 <div class="lightblue-background">
-        <h1><center><strong>Sistemas Electricos</strong></center></h1>
+        <h1><center><strong>Sistemas Eléctricos</strong></center></h1>
     <img class="img-responsive center-block" src= "img/SistemasElectricos.jpg">
                     <br>
                     <div class="box middle-text">
